Troubleshooting, fixed errors, tested the code.

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     },
     "permissions": [
         "tabs",
-        "webNavigation"
+        "webNavigation",
+        "scripting"
     ],
     "host_permissions": [
         "https://www.linkedin.com/*"
